Add GroceryListController and HTML templates

--- a/src/main/resources/templates/edit-grocery.html
+++ b/src/main/resources/templates/edit-grocery.html
@@ -19,11 +19,13 @@
 
     <p>
         <label>Purchased:</label>
-        <input type="checkbox" name="purchased"
+
+        <input type="hidden" name="purchased" value="false">
+        <input type="checkbox" name="purchased" value="true"
                th:checked="${grocery.purchased}">
     </p>
 
-    <button type="submit">Updategrocery list</button>
+    <button type="submit">Update grocery list</button>
 
 </form>
 
