--- a/src/main/resources/templates/groceries.html
+++ b/src/main/resources/templates/groceries.html
@@ -2,32 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Groceries</title>
+    <title>Grocery list</title>
 </head>
 <body>
 
-<h1>Grocery Lists</h1>
+<h1>Groceries</h1>
+
+<a th:href="@{/groceries/new}">Add grocery</a>
 
 <ul>
     <li th:each="grocery : ${groceries}">
-        <span th:text="${grocery.name}">Grocery name</span>
+        <span th:text="${grocery.name}"></span>
 
         <a th:href="@{/groceries/{id}(id=${grocery.id})}">Show info</a>
 
-        <span> - </span>
-
         <a th:href="@{/groceries/{id}/edit(id=${grocery.id})}">Update</a>
 
-        <form th:action="@{/groceries/{id}(id=${grocery.id})}"
-              method="post"
-              style="display: inline;">
-
+        <form th:action="@{/groceries/{id}(id=${grocery.id})}" method="post" style="display: inline">
             <input type="hidden" name="_method" value="DELETE">
             <button type="submit">Delete</button>
         </form>
     </li>
 
-    <a th:href="@{/groceries/new}">Create new grocery list</a>
+
 </ul>
 
 </body>
