--- a/src/main/resources/templates/workout-list.html
+++ b/src/main/resources/templates/workout-list.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Workout Sessions</h1>
     <a th:href="@{/workout/new}">Add New Workout</a>
-    <table border="1">
+    <table>
         <thead>
             <tr>
                 <th>Date</th>
