fix: update button text to back to homepage

--- a/src/main/resources/templates/workout-list.html
+++ b/src/main/resources/templates/workout-list.html
@@ -34,6 +34,6 @@
         </tbody>
     </table>
     <br>
-    <a th:href="@{/}">Back to Hub</a>
+    <a th:href="@{/}">Back to Homepage</a>
 </body>
 </html>
