HomeChore-list created.

--- a/src/main/resources/templates/homechore-detail.html
+++ b/src/main/resources/templates/homechore-detail.html
@@ -11,6 +11,6 @@
 <p>Importance: <span th:text="${chore.important ? 'Important' : 'Not important'}"></span></p>
 <p>Estimated time: <span th:text="${chore.estimatedTime}"></span> minutes</p>
 
-<a th:href="@{/chore-list}">Back to List</a>
+<a th:href="@{/homeChore-list}">Back to List</a>
 </body>
 </html>
