--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
         <a th:href="@{/chores}">
             Home chores
         </a>
-        Organize your home chores.
+        - Organize your home chores.
     </li>
 </ul>
 
